<resources>
    <string name="app_name">My App</string>
    <string name="calculator">calculator</string>
    <string name="first_number">first Number</string>
    <string name="second_number">Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="asterisk">*</string>
    <string name="div">/</string>
    <string name="result">Result</string>
</resources>