<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="23dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:id="@+id/edt_one"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:id="@+id/edt_two"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/plus"
            android:id="@+id/btn_plus"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/minus"
            android:id="@+id/btn_minus"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/asterisk"
            android:id="@+id/btn_multiple"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/div"
            android:id="@+id/btn_div"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:id="@+id/tv_result"
        android:textSize="20sp"
        />



    </LinearLayout>